tests/ui/associated-type-bounds/return-type-notation/bad-inputs-and-output.stderr
error: return type notation uses `()` instead of `(..)` for elided arguments
  --> $DIR/bad-inputs-and-output.rs:16:24
   |
LL | fn baz<T: Trait<method(..): Send>>() {}
   |                        ^^ help: remove the `..`

warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bad-inputs-and-output.rs:3:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: argument types not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:10:23
   |
LL | fn foo<T: Trait<method(i32): Send>>() {}
   |                       ^^^^^ help: remove the input types: `()`

error: return type not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:13:25
   |
LL | fn bar<T: Trait<method() -> (): Send>>() {}
   |                         ^^^^^^ help: remove the return type

error: aborting due to 3 previous errors; 1 warning emitted

